[gd_scene load_steps=7 format=3 uid="uid://db5qjrcbb2u16"]

[ext_resource type="Script" uid="uid://t02v3k2ny5j3" path="res://scripts/fan.gd" id="1_p64dw"]
[ext_resource type="Texture2D" uid="uid://c5c6358lcxlqx" path="res://assets/fan.png" id="2_ib1wi"]
[ext_resource type="Texture2D" uid="uid://2xwcmp74gwc8" path="res://assets/fan-strong.png" id="3_h3fxe"]
[ext_resource type="AudioStream" uid="uid://58wijq53k0q0" path="res://sfx/fan.mp3" id="4_05mpp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ib1wi"]
size = Vector2(82, 154)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h3fxe"]
size = Vector2(1846.5, 108)

[node name="Fan" type="StaticBody2D"]
collision_layer = 6
collision_mask = 6
script = ExtResource("1_p64dw")

[node name="FanSprite" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(41.625, 77)
scale = Vector2(0.4905, 0.364)
texture = ExtResource("2_ib1wi")

[node name="StrongFanSprite" type="Sprite2D" parent="."]
visible = false
z_index = 2
position = Vector2(41.5, 78.5)
scale = Vector2(0.49, 0.358)
texture = ExtResource("3_h3fxe")

[node name="WindSpawnerTimer" type="Timer" parent="."]
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 3
position = Vector2(41.625, 77)
shape = SubResource("RectangleShape2D_ib1wi")

[node name="WindArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WindArea"]
position = Vector2(1008.38, 78)
shape = SubResource("RectangleShape2D_h3fxe")

[node name="FanSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_05mpp")
volume_db = 15.0
autoplay = true

[connection signal="timeout" from="WindSpawnerTimer" to="." method="_on_wind_spawner_timer_timeout"]
[connection signal="body_entered" from="WindArea" to="." method="_on_wind_area_body_entered"]
[connection signal="body_exited" from="WindArea" to="." method="_on_wind_area_body_exited"]
